.provarCaches/00D5h000009Q6XQEA0/objects/provar__Issue__c.object
<CustomObject>
    <fields>
        <fullName>provar__Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>provar__Person__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>provar__External_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>provar__Has_Coverage__c</fullName>
        <formula>provar__Number_of_Test_Cases__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Issue_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Issue Type</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected issue type does not belong to the same project.</errorMessage>
            <filterItems>
                <field>provar__Project_Issue_Type__c.provar__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.provar__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>provar__Project_Issue_Type__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Issue_URL__c</fullName>
        <label>Issue URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>provar__Last_Sync_Activity__c</fullName>
        <label>Last Sync Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>provar__Number_of_Test_Cases__c</fullName>
        <label>Number of Test Cases</label>
        <summaryForeignKey>provar__Issue_Test_Case__c.provar__Issue__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Parent_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Issue</label>
        <referenceTo>provar__Issue__c</referenceTo>
        <relationshipLabel>Child Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Persona__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Persona</label>
        <referenceTo>provar__Persona__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>provar__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>provar__Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Project__c</fullName>
        <label>Project</label>
        <referenceTo>provar__Project__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To Do</fullName>
                    <default>true</default>
                    <label>To Do</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Sync_Information__c</fullName>
        <label>Sync Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__Sync_Status__c</fullName>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Synced</fullName>
                    <default>true</default>
                    <label>Not Synced</label>
                </value>
                <value>
                    <fullName>Synced</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Issue</label>
    <listViews>
        <fullName>provar__All</fullName>
        <columns>NAME</columns>
        <columns>provar__Summary__c</columns>
        <columns>provar__Issue_Type__c</columns>
        <columns>provar__Status__c</columns>
        <columns>provar__Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ISS-{000000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>